deploy: a9481223d1d5a8b3bf0d7ce2140dd3c919481f4f

--- a/develop/print.html
+++ b/develop/print.html
@@ -6006,11 +6006,16 @@ that triggered the notification, <code>True</code> otherwise</li>
 <li><code>sender_avatar_url</code>: the avatar URL (as a <code>mxc://</code> URL) for the event's
 sender</li>
 <li><code>sender_hash</code>: a hash of the user ID of the sender</li>
+<li><code>msgtype</code>: the type of the message</li>
+<li><code>body_text_html</code>: html representation of the message</li>
+<li><code>body_text_plain</code>: plaintext representation of the message</li>
+<li><code>image_url</code>: mxc url of an image, when &quot;msgtype&quot; is &quot;m.image&quot;</li>
 </ul>
 </li>
 </ul>
 </li>
 <li><code>link</code>: a <code>matrix.to</code> link to the room</li>
+<li><code>avator_url</code>: url to the room's avator</li>
 </ul>
 </li>
 <li><code>reason</code>: information on the event that triggered the email to be sent. It's an
