deploy: b0eb64ff7bf6bde42046e091f8bdea9b7aab5f04

--- a/develop/openid.html
+++ b/develop/openid.html
@@ -251,7 +251,7 @@ Edit your Synapse config file and change the <code>oidc_config</code> section:</
         display_name_template: &quot;{{ user.name }}&quot;
 </code></pre>
 <h3 id="dex"><a class="header" href="#dex">Dex</a></h3>
-<p><a href="https://github.com/dexidp/dex">Dex</a> is a simple, open-source, certified OpenID Connect Provider.
+<p><a href="https://github.com/dexidp/dex">Dex</a> is a simple, open-source OpenID Connect Provider.
 Although it is designed to help building a full-blown provider with an
 external database, it can be configured with static passwords in a config file.</p>
 <p>Follow the <a href="https://dexidp.io/docs/getting-started/">Getting Started guide</a>
