deploy: 144b9ede8994707b6fa28e0aa8b0cdafbd2f498c

--- a/develop/print.html
+++ b/develop/print.html
@@ -14488,8 +14488,8 @@ drop support for versions in the future.</p>
 i.e. when a version reaches End of Life Synapse will withdraw support for that
 version in future releases.</p>
 <p>Details on the upstream support life cycles for Python and PostgreSQL are
-documented at https://endoflife.date/python and
-https://endoflife.date/postgresql.</p>
+documented at <a href="https://endoflife.date/python">https://endoflife.date/python</a> and
+<a href="https://endoflife.date/postgresql">https://endoflife.date/postgresql</a>.</p>
 <h2 id="context"><a class="header" href="#context">Context</a></h2>
 <p>It is important for system admins to have a clear understanding of the platform
 requirements of Synapse and its deprecation policies so that they can
